--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,11 @@
 = Intrigue
 
 
+== release 1.0.1    not yet
+
+- introduce libs/ core libraries
+
+
 == release 1.0.0    released 2013/01/24
 
 - extended "less brackets" mode
@@ -11,3 +16,4 @@
 == release 0.9.0    released 2013/01/22
 
 - initial release
+
