--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,13 @@
 = Intrigue
 
 
+== release 1.0.2    not yet
+
+- fix "quote"
+- implement "list"
+- implement "make-environment"
+
+
 == release 1.0.1    released 2013/01/28
 
 - introduce libs/ core libraries
