--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@
 
 == release 1.0.2    not yet
 
+- allow for more than one expression in "lambda" body
 - fix "quote"
 - implement "list"
 - implement "make-environment"
