--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,7 +2,7 @@
 = Intrigue
 
 
-== release 1.0.2    not yet
+== release 1.0.2    released 2013/01/29
 
 - allow for more than one expression in "lambda" body
 - fix "quote"
