--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,7 +2,7 @@
 = Intrigue
 
 
-== release 1.0.3    not yet
+== release 1.0.3    released 2013/01/31
 
 - make #To{Atom|List|Symbol|Function}Node more verbose in case of failure
 - implement Node#ToInteger
