--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,7 +4,7 @@
 
 == release 1.0.4    not yet released
 
-- implement "*"
+- implement "*" and "/" (no floats for now though)
 
 
 == release 1.0.3    released 2013/01/31
