--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@
 
 == release 1.0.4    not yet released
 
+- implement "number?" and "boolean?"
 - implement "symbol->string" and "->string"
 - implement "int", "integer" and "float"
 - support floats (well, doubles)
