--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,11 +4,11 @@
 
 == release 1.0.4    not yet released
 
+- implement "exact->inexact" and "inexact->exact"
 - implement "string?"
 - alias #t and #f for true and false
 - implement "number?" and "boolean?"
 - implement "symbol->string" and "->string"
-- implement "int", "integer" and "float"
 - support floats (well, doubles)
 - implement "*" and "/"
 
