--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@
 
 == release 1.0.4    not yet released
 
+- implement "odd?" and "even?"
 - implement "zero?", "positive?" and "negative?"
 - implement "exact?" and "inexact?"
 - implement "exact->inexact" and "inexact->exact"
