--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@
 
 == release 1.0.4    not yet released
 
+- unlock (lambda (head . tail) ...)
 - unlock direct use of lambdas
 - unlock single symbol argument for lambdas (list)
 - implement "gcd"
