--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,7 +2,7 @@
 = Intrigue
 
 
-== release 1.0.4    not yet released
+== release 1.0.4    released 2013/02/12
 
 - implement "apply"
 - let "define" accept dynamic function names
