--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@
 
 == release 1.0.5    not yet released
 
+- prevent "cons" from mutating lists (instead of creating new lists)
 - make some functions as library functions
 
 
