--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@
 
 == release 1.1.0    not yet released
 
+- parse JSON as well (and run make-jobject)
 - let "apply" accept strings as first argument
 - fix semi-colons eaten by symbols
 - rename FunctionNode to PrimitiveNode
