--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@
 == release 1.1.0    not yet released
 
 - implement "alist?"
+- implement "all?" and "length"
 - parse JSON as well (and run make-jobject)
 - let "apply" accept strings as first argument
 - fix semi-colons eaten by symbols
