--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,7 +4,7 @@
 
 == release 1.1.0    not yet released
 
-- implement "alist?"
+- implement "alist?" and "assoc"
 - implement "all?" and "length"
 - parse JSON as well (and run make-jobject)
 - let "apply" accept strings as first argument
