fix issue with JSON parsing objects/arrays "1}" or "1]"

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,11 @@
 = Intrigue
 
 
+== release 1.1.1    not yet released
+
+- fix issue with numbers when parsing JSON objects and arrays
+
+
 == release 1.1.0    released 2013/02/19
 
 - implement Node#ToJson
